# krosh-ds-bot

./: .gitignore  CMakeLists.txt  README.md  build.sh  dpp.rpm  main  main.cpp
.cache/clangd/index/: Database.cpp.7538E0251C6AC048.idx  Database.h.4FA6412FB02506B1.idx  dotenv.h.EB7A72B570DE6D01.idx  main.cpp.37903E9F5E0B2AA5.idx
cmake/: DPP.cmake  fmt.cmake  httplib.cmake  pqxx.cmake
src/: Database.cpp  Database.h  Demotivator.h  init-database.sh  main.cpp
src/schema/: 000001_init.down.sql  000001_init.up.sql
